--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
+
+<!DOCTYPE html><html>
+<meta charset="utf-8" />
 <head>
-    <title>Demo leaflet.js</title>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-    <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css" />
-</head>
-<body>
-    <h1>Leaflet.js Demo</h1>
-    <div id="map" style="height: 100%"></div>
-    <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-    <script type="text/javascript" src="node_modules/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
-    <script type="text/javascript" src="js/locations.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
-</body>
+	<script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
+
+ <style>
+  #map { 
+    width: 50px;
+  height: 600px; }
+ </style>
+ 
+ </head>
+  <body>
+   <div id="map"></div>
+ <script>
+ 
+var map = L.map('map').
+setView([41.66, -4.72], 
+14);
+ 
+L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
+    maxZoom: 18
+}).addTo(map);
+
+L.control.scale().addTo(map);
+L.marker([41.66, -4.71], {draggable: true}).addTo(map);
+
+ </script>
+ </body> 
+ </html>
