--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		}
 		.leaflet-container {
 			height: 400px;
-			width: 600px;
+			width: 100%;
 			max-width: 100%;
 			max-height: 100%;
 		}
@@ -30,9 +30,7 @@
 </head>
 <body>
 
-
-
-<div id="map" style="width: 600px; height: 400px;"></div>
+<div id="map" style="width: 100%; height: 400px;"></div>
 <script>
 
 	const map = L.map('map').setView([51.505, -0.09], 13);
