--- a/mapa.html
+++ b/mapa.html
@@ -33,7 +33,7 @@
 <div id="map" style="width: 100%; height: 400px;"></div>
 <script>
 
-	const map = L.map('map').setView([51.505, -0.09], 13);
+	const map = L.map('map').setView([17.531023032061036, -99.49756603455724], 13);
 
 	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
